java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/lang.java
package java;

<error descr="Class 'java.lang' clashes with package of same name">class lang</error> { }
